--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,30 @@ services:
     networks:
       - monitoring
 
+  # Grafana para visualización de métricas
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_INSTALL_PLUGINS: grafana-piechart-panel
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
+    depends_on:
+      - prometheus
+    networks:
+      - monitoring
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+
   # SonarQube para análisis de calidad de código
   sonarqube:
     image: sonarqube:latest
@@ -37,7 +61,6 @@ services:
       SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
       SONAR_JDBC_USERNAME: sonar
       SONAR_JDBC_PASSWORD: sonar
-      SONAR_WEB_CONTEXT: /sonarqube
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
@@ -73,6 +96,7 @@ services:
 
 volumes:
   prometheus_data:
+  grafana_data:
   sonarqube_data:
   sonarqube_extensions:
   sonarqube_logs:
