--- a/prometheus.yml
+++ b/prometheus.yml
@@ -7,6 +7,6 @@ global:
 scrape_configs:
   - job_name: 'spring-boot-app'
     static_configs:
-      - targets: ['localhost:8080']
+      - targets: ['app:8080']
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
